--- a/charts/quickstart-kubevirt/crds/customresourcedefinition-kubevirts.kubevirt.io.yaml
+++ b/charts/quickstart-kubevirt/crds/customresourcedefinition-kubevirts.kubevirt.io.yaml
@@ -269,7 +269,7 @@ spec:
                           x-kubernetes-list-type: atomic
                         nodeMediatedDeviceTypes:
                           items:
-                            description: NodeMediatedDeviceTypesConfig holds information about MDEV types to be defined in a specifc node that matches the NodeSelector field.
+                            description: NodeMediatedDeviceTypesConfig holds information about MDEV types to be defined in a specific node that matches the NodeSelector field.
                             properties:
                               mediatedDeviceTypes:
                                 items:
@@ -309,7 +309,7 @@ spec:
                           anyOf:
                             - type: integer
                             - type: string
-                          description: BandwidthPerMigration limits the amount of network bandwith live migrations are allowed to use. The value is in quantity per second. Defaults to 0 (no limit)
+                          description: BandwidthPerMigration limits the amount of network bandwidth live migrations are allowed to use. The value is in quantity per second. Defaults to 0 (no limit)
                           pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                           x-kubernetes-int-or-string: true
                         completionTimeoutPerGiB:
@@ -1947,7 +1947,7 @@ spec:
                           x-kubernetes-list-type: atomic
                         nodeMediatedDeviceTypes:
                           items:
-                            description: NodeMediatedDeviceTypesConfig holds information about MDEV types to be defined in a specifc node that matches the NodeSelector field.
+                            description: NodeMediatedDeviceTypesConfig holds information about MDEV types to be defined in a specific node that matches the NodeSelector field.
                             properties:
                               mediatedDeviceTypes:
                                 items:
@@ -1987,7 +1987,7 @@ spec:
                           anyOf:
                             - type: integer
                             - type: string
-                          description: BandwidthPerMigration limits the amount of network bandwith live migrations are allowed to use. The value is in quantity per second. Defaults to 0 (no limit)
+                          description: BandwidthPerMigration limits the amount of network bandwidth live migrations are allowed to use. The value is in quantity per second. Defaults to 0 (no limit)
                           pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                           x-kubernetes-int-or-string: true
                         completionTimeoutPerGiB:
