--- a/pkg/crd/k8c.io/kubermatic.k8c.io_etcdbackupconfigs.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_etcdbackupconfigs.yaml
@@ -4,7 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.3
-    kubermatic.k8c.io/location: seed
+    kubermatic.k8c.io/location: master,seed
   creationTimestamp: null
   name: etcdbackupconfigs.kubermatic.k8c.io
 spec:
